--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,5 +55,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
+# # copy and paste with a clipboard
+# bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
+# bind C-v run "tmux set-buffer "$(xclip -o -sel clipboard)"; tmux paste-buffer"
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 # run '~/.tmux/plugins/tpm/tpm'
